[project]
name = "natsuki"
version = "0.1.0"
description = "Hybrid BM25 + dense retrieval engine with a learned reranker"
readme = "README.md"
authors = [
    { name = "Shreyas Deb", email = "shreyasdeb@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastembed>=0.8.0",
    "ir-datasets>=0.6.1",
    "lightgbm>=4.6.0",
    "mistralai>=2.6.0",
    "numpy>=2.5.1",
    "python-dotenv>=1.2.2",
    "tqdm>=4.68.4",
]

[project.scripts]
natsuki = "natsuki.cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
